#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT(dandelion, 1.0, phoebusveiz@gmail.com)
AC_CONFIG_SRCDIR([main.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(dandelion, 1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([pthread], [main])
AC_CHECK_LIB([curl], [curl_easy_init])
AC_CHECK_LIB([ssl], [SSL_library_init])
AC_CHECK_LIB([crypto], [AES_cbc_encrypt])
AC_CHECK_LIB([sasl2], [sasl_client_init])
AC_CHECK_LIB([z], [main])
AC_CHECK_LIB([dl], [dlopen])
AC_CHECK_LIB([iconv], [iconv])
AC_PROG_RANLIB

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/socket.h sys/time.h unistd.h curl/curl.h openssl/ssl.h openssl/crypto.h sasl/sasl.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_INT32_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T
AC_TYPE_INT64_T
AC_TYPE_UINT64_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
# AC_FUNC_MALLOC
# AC_FUNC_REALLOC
AC_CHECK_FUNCS([floor gethostbyaddr gethostbyname memmove memset socket strcasecmp strchr strncasecmp strpbrk strstr strtol])

AC_OUTPUT([Makefile
		net/Makefile
		url/Makefile
		])
